@@ -15,11 +15,12 @@ href="patternset.html">PatternSets</a>. FileSets can appear inside tasks
 that support this feature or at the same level as <code>target</code>
 - i.e., as children of <code>project</code>.</p>
 <p>PatternSets can be specified as nested
-<code>&lt;patternset&gt;</code> 
-elements. In addition, FileSet holds an implicit PatternSet and
-supports the nested <code>&lt;include&gt;</code> and
-<code>&lt;exclude&gt;</code> elements of PatternSet directly, as well
-as PatternSet's attributes.</p>
+<code>&lt;patternset&gt;</code> elements. In addition, FileSet holds
+an implicit PatternSet and supports the nested
+<code>&lt;include&gt;</code>, <code>&lt;includesfile&gt;</code>,
+<code>&lt;exclude&gt;</code> and <code>&lt;excludesfile&gt;</code>
+elements of PatternSet directly, as well as PatternSet's
+attributes.</p>
 <table border="1" cellpadding="2" cellspacing="0">
   <tr>
     <td valign="top"><b>Attribute</b></td>
