@@ -28,7 +28,7 @@ the include patterns, and don't match the exclude patterns, are used.</p>
 nested elements and via external files. Each line of the external file
 is taken as a pattern that is added to the list of include or exclude 
 patterns.</p>
-<h3>Patterns</h3>
+<h3><a name="patterns">Patterns</a></h3>
 <p>As described earlier, patterns are used for the inclusion and exclusion.
 These patterns look very much like the patterns used in DOS and UNIX:</p>
 <p>'*' matches zero or more characters, '?' matches one character.</p>
